# TCPCafe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: asio.cmake  glad.cmake  glfw.cmake  imgui-node-editor.cmake  imgui.cmake  nativefiledialog-extended.cmake  nlohmann-json.cmake  stb.cmake
src/: Application.cpp  Application.h  main.cpp
src/Nodes/: AddNode.cpp  AddNode.h  BooleanDisplayNode.cpp  BooleanDisplayNode.h  BooleanOperatorNode.cpp  BooleanOperatorNode.h  ButtonNode.cpp  ButtonNode.h  ClonableNode.h  ConcatNode.cpp  ConcatNode.h  Drawing.cpp  Link.h  Node.cpp  Node.h  NodeManager.cpp  NodeManager.h  NumberNode.cpp  NumberNode.h  Pin.cpp  Pin.h  PrintNode.cpp  PrintNode.h  StringNode.cpp  StringNode.h  SubtractNode.cpp  SubtractNode.h  TCPClientNode.cpp  TCPClientNode.h  TCPServerNode.cpp  TCPServerNode.h  TimerNode.cpp  TimerNode.h  ToggleNode.cpp  ToggleNode.h  Widgets.cpp
src/Serialization/: ISerializable.h
src/TCP/Client/: TCPClient.cpp  TCPClient.h
src/TCP/Server/: TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h
src/Widgets/: IWidget.h  SendMessageWidget.cpp  SendMessageWidget.h
src/Window/: FileDialogue.h  FileManager.cpp  FileManager.h  Window.cpp  Window.h
